# Sentinel

./: .dockerignore  .env.example  .gitignore  .lintstagedrc.json  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LANDING.md  README.md  cliff.toml  conftest.py  docker-compose.yml  eslint.config.ts  index.html  jest.config.js  main.js  nginx.conf  package-lock.json  package.json  playwright.fullstack.config.ts  pytest.ini  sdr-display.js  sdr-panel.js  style.css  tsconfig.e2e.json  tsconfig.json  types.js
.claude/: settings.json
.github/workflows/: changelog.yml  ci.yml
.husky/: pre-commit
air/: index.html
backend/: Dockerfile  cache.py  config.py  database.py  db_helpers.py  default_config.json  error_handlers.py  main.py  models.py  pyproject.toml  sentinel.db-shm  utils.py
backend/data/: amateur_radio_data.json  satellite_radio.json  satellite_radio_extra.json  sdr_bandplan.json  sdr_frequencies.json
backend/routers/: air.py  land.py  sdr.py  sea.py  settings.py  space.py
backend/scripts/: apply_satellite_radio.py  build_satellite_radio_extra.py  fetch_amateur_radio_data.py  seed_amateur_radio_data.py
backend/services/: adsb.py  aprs_store.py  daynight.py  flight_history.py  geocode.py  json_store.py  sat_radio.py  satellite.py  sdr.py  sdr_channel_maps.py  sdr_data.py  sdr_decode.py  sdr_rigctl.py  tle.py
components/air/: types.js
components/shared/: types.js
decoder/: .dockerignore  Dockerfile  README.md  entrypoint.py
decoder/aprs/: Dockerfile  README.md  entrypoint.py
decoder/channel-maps/: README.md
docs/: accessibility-audit.md  api.html  backend.html  dependencies.html  features.html  frontend.html  index.html  overview.html  shared.css
docs/adr/: 0001-webapp-standards-retrofit.md  0002-base-component-dedupe.md
frontend/: globals.d.ts  types.js  types.ts
frontend/assets/: docs-content.html  fiord-online.json  fiord.json  gb_airspace.geojson  style.css  template.css  template.js
frontend/components/: globals.d.ts  types.js  types.js.map  types.ts
frontend/spa-dist/: index.html
frontend/templates/: base.html
frontend/vue/: .gitignore  .prettierignore  eslint.config.ts  index.html  package 2.json  package-lock.json  package.json  playwright.config.ts  vite.config 2.ts  vite.config.ts  vitest.config.ts
land/: index.html
sea/: index.html
space/: index.html
tests/backend/: test_aprs_store.py  test_decoder_aprs_entrypoint.py  (+15 more)
(+1313 files in other folders)
